# adventofcode

./: .gitignore  README.md  main.css  main.py  pyproject.toml  requirements.txt
2015/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
2020/: day01.go  day02.go  day03.go  day04.go  main.go
2024/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
2025/: __init__.py  day01.py  day02.py
utils/: __init__.py  utils.go  utils.py
